--- a/src/components/home/HomeSplash.module.css
+++ b/src/components/home/HomeSplash.module.css
@@ -9,8 +9,8 @@
   opacity: 1;
   visibility: visible;
   transition:
-    opacity var(--dur-slow) var(--ease-out),
-    visibility 0s linear var(--dur-slow);
+    opacity var(--motion-duration-lg) var(--ease-out),
+    visibility 0s linear var(--motion-duration-lg);
 }
 
 @supports (height: 100dvh) {
