--- a/src/components/ui/league/pillars/PillarBadge.module.css
+++ b/src/components/ui/league/pillars/PillarBadge.module.css
@@ -55,15 +55,15 @@
 }
 
 .icon {
-  width: 1rem;
-  height: 1rem;
+  width: var(--space4);
+  height: var(--space4);
   opacity: 0.95;
 }
 
 .label {
   position: relative;
   z-index: 1;
-  letter-spacing: 0.2px;
+  letter-spacing: calc(var(--spacing-1) / 20);
   text-shadow: 0 var(--hairline-w) 0 hsl(var(--shadow-color) / 0.05);
 }
 
