--- a/app/themes.css
+++ b/app/themes.css
@@ -1,1 +1,34 @@
+@import "../tokens/tokens.css";
 @import "../src/app/themes.css";
+
+:root {
+  /* Map legacy hyphenated spacing tokens to the generated camel variants. */
+  --space-0: 0px;
+  --space-0-5: calc(var(--space1) / 2);
+  --space-0_5: var(--space-0-5);
+  --space-1: var(--space1);
+  --space-2: var(--space2);
+  --space-3: var(--space3);
+  --space-4: var(--space4);
+  --space-5: var(--space5);
+  --space-6: var(--space6);
+  --space-7: var(--space7);
+  --space-8: var(--space8);
+  --space-9: var(--space9);
+  --space-10: var(--space10);
+  --space-11: var(--space11);
+  --space-12: var(--space12);
+  --space-16: var(--space16);
+
+  --spacing-0-25: var(--spacing025);
+  --spacing-0-5: var(--spacing05);
+  --spacing-0-75: var(--spacing075);
+  --spacing-1: var(--spacing1);
+  --spacing-2: var(--spacing2);
+  --spacing-3: var(--spacing3);
+  --spacing-4: var(--spacing4);
+  --spacing-5: var(--spacing5);
+  --spacing-6: var(--spacing6);
+  --spacing-7: var(--spacing7);
+  --spacing-8: var(--spacing8);
+}
